historical data working with params

--- a/django_backend/api/templates/index.html
+++ b/django_backend/api/templates/index.html
@@ -15,8 +15,8 @@
         Cash Flow of RELIANCE.NS
     </a><br>
     <a
-        href="./get_historical_data/RELIANCE.NS">
-        Historical Data of RELIANCE.NS
+        href="./get_historical_data/RELIANCE.NS/?interval=1d&period=1mo">
+        Historical Data of RELIANCE.NS of interval=1d period=1mo
     </a><br>
     <a
         href="./get_sector_and_industry/RELIANCE.NS">
